# ydoc

./: .coveragerc  API_DOCUMENTATION.md  CONFLICT_RESOLUTION_IMPLEMENTATION.md  DEVELOPMENT.md  LICENSE  README.md  coverage.xml  coverage_report.md  pyproject.toml
.github/workflows/: test.yml
examples/: api_reference.py  apply_update_demo.py  awareness_demo.py  basic_usage.py  conflict_resolution_demo.py  crdt_demo.py  encode_apply_demo.py  encoding_demo.py  event_demo.py  full_crdt_demo.py  undo_demo.py  yjs_api_demo.py
src/ydoc/: __init__.py  awareness.py  doc.py  encoding.py  id.py  observable.py  struct_store.py  transaction.py  types.py  undo_manager.py  update.py  update_decoder.py  update_encoder.py  yevent.py
tests/: test_awareness.py  test_basic.py  test_encoding.py  test_struct_store.py  test_transaction.py  test_types.py  test_undo_focused.py  test_update_conflict_resolution.py
